<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="@dimen/image_width_main_layout"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/car_year_make_model"

        style="@style/car_year_make_model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"

        android:layout_marginLeft="8dp"

        android:layout_marginTop="8dp"
        android:padding="@dimen/car_year_make_model_padding_main_layout"
        android:text="@string/car_year_make_model_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        style="@style/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginTop="8dp"

        android:paddingStart="@dimen/price_left_padding_main_layout"
        android:paddingLeft="@dimen/price_left_padding_main_layout"
        android:text="@string/price_placeholder"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/car_year_make_model" />

    <TextView
        android:id="@+id/location"
        style="@style/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="@dimen/location_padding_main_layout"
        android:text="@string/vehicle_location_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text=" USD $"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/carImage"
        app:layout_constraintTop_toBottomOf="@+id/car_year_make_model" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:padding="@dimen/location_padding_main_layout"
        android:text="Location: "
        app:layout_constraintStart_toEndOf="@+id/carImage"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>